gccida/c3/record_reg_classes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1892:7: error: conflicting types for 'record_reg_classes'
void  record_reg_classes( 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:883:13: note: previous declaration is here
static void record_reg_classes  PARAMS ((int, int, rtx *, enum machine_mode *,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1903:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v9; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1911:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v17; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1918:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v24; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1919:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v25; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1946:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v52; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1949:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v55; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1951:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v57; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1953:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v59; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1958:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v64; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1959:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v65; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1963:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v69; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1967:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v73; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:1974:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v80; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:2042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode[2]; // [rsp+60h] [rbp-DC8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:2089:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v91 = recog_data_0.operand[v90 / 4]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:2172:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v12 = recog_data_0.operand[v10]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/regclass.c:2182:12: error: expected expression
*( _OWORD *)&v161[v22 + 84] = 0LL; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_reg_classes/src/obj/regclass.o] Error 1
